--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <!--icon网页title小图标-->
     <link rel="shortcut icon" href="http://cdn.mingsoft.net/global/images/ms.ico" type="x-icon">
 
-    <script src="http://cdn.mingsoft.net/plugins/jquery/1.9.1/jquery-1.9.1.js"></script>
+    <script src="js/jquery-1.9.1.js"></script>
     <!--字体 动画 基础CSS--> 
-    <link rel="stylesheet" type="text/css" href="http://cdn.mingsoft.net/plugins/iconfont/1.0.0/iconfont.css" />
-    <link rel="stylesheet" type="text/css" href="http://cdn.mingsoft.net/plugins/animate/1.0.0/animate.css">
+    <link rel="stylesheet" type="text/css" href="css/iconfont.css" />
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
 
-    <link rel="stylesheet" type="text/css" href="http://cdn.mingsoft.net/plugins/bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src="http://cdn.mingsoft.net/plugins/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="http://cdn.mingsoft.net/plugins/bootstrap/3.3.5/css/bootstrap-responsive.min.css"> 
-    <script src="http://cdn.mingsoft.net/plugins/bootstrap/3.3.5/js/bootstrapValidator.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css"> 
+    <script src="js/bootstrapValidator.min.js"></script>
 
-    <script src="http://cdn.mingsoft.net/plugins/jquery.cookie/2.2.0/jquery.cookie.js" type="text/javascript"></script>
-    <script src="http://cdn.mingsoft.net/plugins/jquery.serializeObject/2.5.0/jquery.serialize-object.min.js"></script>
-    <script src="http://cdn.mingsoft.net/plugins/jquery.tmpl/1.4.2/jquery.tmpl.min.js"></script>
-    <script src="http://cdn.mingsoft.net/plugins/seajs/3.0.0/sea.js"></script>
-    <script src="http://cdn.mingsoft.net/model/1.0.0/main.min.js"></script>
+    <script src="js/jquery.cookie.js" type="text/javascript"></script>
+    <script src="js/jquery.serialize-object.min.js"></script>
+    <script src="js/jquery.tmpl.min.js"></script>
+    <script src="js/sea.js"></script>
+    <script src="js/main.min.js"></script>
     <script>
         //document.domain = 'mingsoft.net';
         ms.config({
@@ -37,16 +37,16 @@
     </script>
 
 
-    <script src="http://ms.mingsoft.net/templets/86/cms/js/base.js"></script>
+    <script src="js/base.js"></script>
 
-    <link href="http://ms.mingsoft.net/templets/86/cms/css/site.min.css-v5.css" rel="stylesheet">
-    <link href="http://ms.mingsoft.net/templets/86/cms/css/base.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="http://cdn.mingsoft.net/global/css/base/1.0.0/ms.base.min.css">
+    <link href="css/site.min.css-v5.css" rel="stylesheet">
+    <link href="css/base.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/ms.base.min.css">
     
     <!--旧版文档-->
-    <link rel="stylesheet" type="text/css" href="http://cdn.mingsoft.net/plugins/ueditor/1.3.6/shCoreDefault.css">
+    <link rel="stylesheet" type="text/css" href="css/shCoreDefault.css">
     <!--代码高亮-->
-    <script src="http://cdn.mingsoft.net/plugins/ueditor/1.3.6/shCore.js"></script>
+    <script src="js/shCore.js"></script>
     <script> 
     SyntaxHighlighter.all() //执行代码高亮 
 	</script>
@@ -58,9 +58,9 @@
     
 
     <!---首页幻灯-->
-    <link href="http://ms.mingsoft.net/templets/86/cms//css/index.css" rel="stylesheet">
-    <link href="http://ms.mingsoft.net/templets/86/cms//css/slide.css" rel="stylesheet">
-    <script src="http://ms.mingsoft.net/templets/86/cms//js/slider.js"></script>
+    <link href="css/index.css" rel="stylesheet">
+    <link href="css/slide.css" rel="stylesheet">
+    <script src="js/slider.js"></script>
 
 <style type="text/css">
 #myClient .exhibitionActivity{
