--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="传媒">
     <!--资源库文件引用-->
     <!--icon网页title小图标-->
-    <link rel="shortcut icon" href="http://cdn.mingsoft.net/global/images/ms.ico" type="x-icon">
+    <link rel="shortcut icon" href="images/web_icon.ico" type="x-icon">
 
     <script src="js/jquery-1.9.1.js"></script>
     <!--字体 动画 基础CSS--> 
@@ -96,7 +96,7 @@
 <div id="menu">
   <div class="header-nav">
     <ul class="daohang">
-      <li class="daohang_li" style="padding-left: 0px;text-align: left;"><a href="http://ms.mingsoft.net/html/86"><img src="http://cdn.mingsoft.net/images/logo.png"  style="margin-top:0px;"/></a></li> 
+      <li class="daohang_li" style="padding-left: 0px;text-align: left;"><a href="http://ms.mingsoft.net/html/86"><img src="images/logo.png"  style="margin-top:0px;"/></a></li> 
 
       <li class="daohang_li"><a href="#">首页</a></li>
 
