--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         </ul>
     </div>
     <div class="footer-msg">
-        <p>版权所有 棋布星盘2012-2017 保留一切权利。</p>
+        <p>版权所有 棋布星盘传媒有限公司2017-2020  &nbsp;&nbsp;&nbsp;技术支持：远方科技工作室</p>
     </div>
 </div>
 <!--footer end-->
