--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -118,7 +118,7 @@
       </li>
 
       <li class="daohang_li daohang_li_parentmenu"><a href="#" target="_blank">运营团队</a></li>
-      <li class="daohang_li"><a href="#" target="_blank">联系我们</a></li>
+      <li class="daohang_li"><a href="html/weixin_location.html" target="_blank">联系我们</a></li>
 
     </ul>
     
