--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -125,16 +125,7 @@
 <script>
   $("#topnav").load("header.html");
   $("#footview").load("foot.html");
-	//头部菜单上移出现子菜单
-    $(".daohang_li_parentmenu").hover(
-      function(){
-       $(this).find(".daohang_li_menu").slideDown();
-       $(this).addClass("daohang_li_parentmenuhover");
-     },
-     function(){
-       $(this).find(".daohang_li_menu").slideUp(100);
-       $(this).removeClass("daohang_li_parentmenuhover");
-     });
+	
  /* $(document).ready(function(){
     
     $(".exhibitionActivity ul li img").hover(
