--- a/header.html
+++ b/header.html
@@ -36,4 +36,18 @@
 </div>
 <!--头部end-->
 
+<script>
+  $(document).ready(function(){
+    //头部菜单上移出现子菜单
+    $(".daohang_li_parentmenu").hover(
+      function(){
+       $(this).find(".daohang_li_menu").slideDown();
+       $(this).addClass("daohang_li_parentmenuhover");
+     },
+     function(){
+       $(this).find(".daohang_li_menu").slideUp(100);
+       $(this).removeClass("daohang_li_parentmenuhover");
+     });
 
+  });
+</script>
