--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
 	<link rel="stylesheet" type="text/css" href="css/my_cus.css">
 	<link rel="stylesheet" type="text/css" href="css/qr_float.css" charset="utf-8">
     <script src="js/slider.js"></script>
-
+	<script src="js/device.js"></script>
+<script type=”text/javascript”>
+if(device.mobile()){
+window.location = “weixin_index.html”;  //可以换成http地址
+}
+</script>
 </head>
 
 <body class="home-template">
