--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<script src="js/device.js"></script>
 <script type=”text/javascript”>
 if(device.mobile()){
-window.location = “weixin_index.html”;  //可以换成http地址
+window.location.href = "weixin_index.html";  //可以换成http地址
 }
 </script>
 </head>
