--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<link rel="stylesheet" type="text/css" href="css/qr_float.css" charset="utf-8">
     <script src="js/slider.js"></script>
 	<script src="js/device.js"></script>
-<script type=”text/javascript”>
+<script type="text/javascript">
 if(device.mobile()){
 window.location.href = "weixin_index.html";  //可以换成http地址
 }
