--- a/weixin_index.html
+++ b/weixin_index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <title>棋布星盘</title>
 <!--字体 动画 基础CSS--> 
     <link rel="stylesheet" type="text/css" href="css/iconfont.css" />
