--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>棋布星盘</title>
+<title>棋布星盘文化传播有限责任公司</title>
     <meta name="description" content="棋布星盘">
     <meta name="keywords" content="传媒，棋布星盘">
     <!--资源库文件引用-->
