--- a/cggcsWeb/yhys.html
+++ b/cggcsWeb/yhys.html
@@ -29,7 +29,7 @@
 <table width="100%" border="0">
   <tbody>
     <tr>
-      <td><img src="images/v4_line.png" width="100%"/></td>
+      <td><img src="images/v4_line.png" width="50%"/></td>
       <td style="padding-top:25px">
       <span style="font-family:SimHei;font-size:16px;"><strong>设备：</strong>光机所高科技实验室及先进仪器设备；</span><br /><br />
 <span style="font-family:SimHei;font-size:16px;"><strong>实训：</strong>光机所及长光集团70家企业实习、实训；</span><br /><br />
@@ -42,7 +42,7 @@
 </table>
 
 </div>
-<img src="images/btn_back2.png" width="8%" style="position:fixed; top:10px; left:20px" onClick="history.go(-1)"/>
+<img src="images/btn_back2.png" width="8%" style="position:fixed; bottom:10px; left:20px" onClick="history.go(-1)"/>
  </div>
 </body>
 </html>
