--- a/cggcsWeb/ccgjs.html
+++ b/cggcsWeb/ccgjs.html
@@ -40,7 +40,7 @@
 	<br />
 </p>
 </div>
-<img src="images/btn_back2.png" width="8%" style="position:fixed; top:10px; left:20px" onClick="history.go(-1)"/>
+<img src="images/btn_back2.png" width="8%" style="position:fixed; bottom:10px; left:20px" onClick="history.go(-1)"/>
 </div>
 </body>
 </html>
