--- a/cggcsWeb/cggcs.html
+++ b/cggcsWeb/cggcs.html
@@ -28,7 +28,7 @@
 <span style="font-family:SimHei;font-size:16px;">&nbsp;&nbsp;&nbsp; 长光工程师培训中心是中科院长春光机所旗下，旨在培养光电、机电、信息方面的高水平工程技能型人才的专业培训机构，是吉林省教育厅指导下成立的吉林省工程师培训教育联盟的主要载体。</span><br />
 <span style="font-family:SimHei;font-size:16px;">&nbsp;&nbsp;&nbsp; 长光工程师培训中心，借助长春光机所的硬件优势及软件优势，结合“中国制造2025”、“互联网+”以及“双创”对综合人才的迫切需求，让每一名学员带着扎实的专业知识和实操工作经验上岗，有效缩短了用人单位的培训周期，让学员在正式参加工作后更好更快的适应企业。</span>
 </div>
-<img src="images/btn_back2.png" width="8%" style="position:fixed; top:10px; left:20px" onClick="history.go(-1)"/>
+<img src="images/btn_back2.png" width="8%" style="position:fixed; bottom:10px; left:20px" onClick="history.go(-1)"/>
 </div>
 </body>
 </html>
