--- a/cggcsWeb/dhzx.html
+++ b/cggcsWeb/dhzx.html
@@ -35,7 +35,7 @@
 <span style="font-family:SimHei;font-size:16px;">长春光机所研究生部<br />（东环城营口路88号）</span><br />
 <span style="font-family:SimHei;font-size:16px;">长春光机所研发大厦<br />（东南湖大路3888号）</span>
 </div>
-<img src="images/btn_back2.png" width="8%" style="position:fixed; top:10px; left:20px" onClick="history.go(-1)"/>
+<img src="images/btn_back2.png" width="8%" style="position:fixed; bottom:10px; left:20px" onClick="history.go(-1)"/>
  </div>
 </body>
 </html>
