--- a/cggcsWeb/whbb.html
+++ b/cggcsWeb/whbb.html
@@ -37,7 +37,7 @@
 <a href="http://news.xwh.cn/2017/0327/375514.shtml" target="_blank"><span style="font-family:SimHei;font-size:16px;">新文化网</span></a><br />
 <a href="http://finance.china.com.cn/roll/20170327/4152431.shtml" target="_blank"><span style="font-family:SimHei;font-size:16px;">中国财经网</span></a><br />
 </div>
-<img src="images/btn_back2.png" width="8%" style="position:fixed; top:10px; left:20px" onClick="history.go(-1)"/>
+<img src="images/btn_back2.png" width="8%" style="position:fixed; bottom:10px; left:20px" onClick="history.go(-1)"/>
  </div>
 </body>
 </html>
