--- a/cggcsWeb/ccgjs.html
+++ b/cggcsWeb/ccgjs.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" type="text/css" href="css/iconfont.css" />
 <link rel="stylesheet" type="text/css" href="css/animate.css">
 <link rel="stylesheet" type="text/css" href="css/weixin_slide.css" >
+<script type="text/javascript" src="js/tagVal.js"></script>
 </head>
 
 <body>
@@ -25,16 +26,17 @@
   </tbody>
 </table>
 <div style="color:#FFFFFF; padding:20px; line-height:30px;">
-<p>
-	<span style="font-family:SimHei;font-size:16px;">&nbsp;&nbsp; &nbsp;&nbsp; 长春光机所，全称中国科学院长春光学精密机械与物理研究所，始建于1952年，1999年由中科院长春光机所与中科院长春物理所整合而成，被誉为中国光学的摇篮，是专注于精密仪器与装备领域的大型科研机构，仅以科技成果转化孵化为基础的光机电产业集群，目前就有70多家。</span>
+<p style="text-indent:2em">
+	<span style="font-family:SimHei;font-size:16px;">长春光机所，全称中国科学院长春光学精密机械与物理研究所，始建于1952年，1999年由中科院长春光机所与中科院长春物理所整合而成，被誉为中国光学的摇篮，是专注于精密仪器与装备领域的大型科研机构，仅以科技成果转化孵化为基础的光机电产业集群，目前就有70多家。</span>
 </p>
-<p>
+<p style="text-indent:2em">
 	<span style="font-family:SimHei;font-size:16px;"></span>
-<span style="font-family:SimHei;font-size:16px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 研究所主要研究方向是发光学、应用电学、光学工程、精密机械与仪器的研发生产，先后参与了“两弹一星”、“载人航天工程”等多项国家重点工程项目。</span><br />
-<span style="font-family:Microsoft YaHei;font-size:16px;">&nbsp;&nbsp; &nbsp;&nbsp; 中科院长春光机所官网</span>
+<span style="font-family:SimHei;font-size:16px;">研究所主要研究方向是发光学、应用电学、光学工程、精密机械与仪器的研发生产，先后参与了“两弹一星”、“载人航天工程”等多项国家重点工程项目。</span><br />
+
 </p>
-<p>
-	<span style="font-family:SimHei;font-size:16px;">&nbsp;&nbsp;&nbsp;</span><a href="http://www.ciomp.ac.cn" target="_blank" style="color:#FFFFFF">http://www.ciomp.ac.cn</a> 
+<p  style="text-indent:2em">
+     <span style="font-family:Microsoft YaHei;font-size:16px;text-indent:2em">中科院长春光机所官网</span>
+	<a href="http://www.ciomp.ac.cn" target="_blank" style="color:#FFFFFF;text-indent:2em">http://www.ciomp.ac.cn</a> 
 </p>
 <p>
 	<br />
