--- a/cggcsWeb/dhzx.html
+++ b/cggcsWeb/dhzx.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="css/iconfont.css" />
 <link rel="stylesheet" type="text/css" href="css/animate.css">
 <link rel="stylesheet" type="text/css" href="css/weixin_slide.css" >
-
+<script type="text/javascript" src="js/tagVal.js"></script>
 </head>
 
 <body>
@@ -25,16 +25,16 @@
     </tr>
   </tbody>
 </table>
-<div style="color:#FFFFFF; padding:20px; line-height:30px;">
-<span style="font-family:SimHei;font-size:16px;">王老师：电话/微信13596115460</span><br />
-<span style="font-family:SimHei;font-size:16px;">邓老师：电话/微信18604313307</span><br />
-<span style="font-family:SimHei;font-size:16px;">刘老师&nbsp;&nbsp; 电话/微信18088600799</span><br />
-<span style="font-family:SimHei;font-size:16px;">李老师&nbsp;&nbsp; 电话/微信15943071698</span><br />
-<br />
-<span style="font-family:SimHei;font-size:16px;">课程地点：</span><br />
-<span style="font-family:SimHei;font-size:16px;">长春光机所研究生部<br />（东环城营口路88号）</span><br />
-<span style="font-family:SimHei;font-size:16px;">长春光机所研发大厦<br />（东南湖大路3888号）</span>
-</div>
+<div style="color:#FFFFFF; padding:20px; line-height:30px;">王老师：电话/微信13596115460<br>
+邓老师：电话/微信18604313307<br>
+刘老师：电话/微信18088600799<br>
+李老师：电话/微信15943071698<br>
+<br>
+课程地点：<br>
+长春光机所研究生部<br>
+（东环城营口路88号）<br>
+长春光机所研发大厦<br>
+（东南湖大路3888号）</div>
 <img src="images/btn_back2.png" width="8%" style="position:fixed; bottom:10px; left:20px" onClick="history.go(-1)"/>
  </div>
 </body>
