--- a/cggcsWeb/index.html
+++ b/cggcsWeb/index.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/slider.js"></script>
+<script type="text/javascript" src="js/tagVal.js"></script>
 <script type="text/javascript">
 function gotoPage(i){
 	if(i==1){
