--- a/cggcsWeb/snbm.html
+++ b/cggcsWeb/snbm.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="css/iconfont.css" />
 <link rel="stylesheet" type="text/css" href="css/animate.css">
 <link rel="stylesheet" type="text/css" href="css/weixin_slide.css" >
-
+<script type="text/javascript" src="js/tagVal.js"></script>
 </head>
 
 <body>
