--- a/cggcsWeb/whbb.html
+++ b/cggcsWeb/whbb.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="css/iconfont.css" />
 <link rel="stylesheet" type="text/css" href="css/animate.css">
 <link rel="stylesheet" type="text/css" href="css/weixin_slide.css" >
-
+<script type="text/javascript" src="js/tagVal.js"></script>
 </head>
 
 <body>
@@ -26,16 +26,17 @@
   </tbody>
 </table>
 <div style="color:#FFFFFF; padding:20px; line-height:30px;">
-<span style="font-family:SimHei;font-size:16px;">&nbsp;&nbsp;&nbsp; 长春光机所，被誉为中国光学的摇篮，是专注于精密仪器与装备领域的大型科研机构，以科技成果转化孵化为基础的光机电产业集群，目前就有70多家。发展不断，就得亟需人才，人才哪里来？还有比自己培训更靠谱的事吗？当然没有了！于是，长光工程师培训中心成立了，3年万名工程师培养计划启动。</span><br />
+<p style="text-indent:2em">
+<span style="font-family:SimHei;font-size:16px;">长春光机所，被誉为中国光学的摇篮，是专注于精密仪器与装备领域的大型科研机构，以科技成果转化孵化为基础的光机电产业集群，目前就有70多家。发展不断，就得亟需人才，人才哪里来？还有比自己培训更靠谱的事吗？当然没有了！于是，长光工程师培训中心成立了，3年万名工程师培养计划启动。</span>
+</p>
 <br />
-<span style="font-family:SimHei;font-size:16px;">相关新闻：</span><br />
-<br />
+<span style="font-family:SimHei;font-size:16px;">相关新闻：</span><br/>
 <a href="http://www.jlio.gov.cn/index.php?m=content&c=index&a=show&catid=24&id=4323" target="_blank"><span style="font-family:SimHei;font-size:16px;">吉林省政府新闻办公室</span></a><br />
 <a href="http://www.ciomp.ac.cn/xwdt/yw/201704/t20170401_4770695.html" target="_blank"><span style="font-family:SimHei;font-size:16px;">中科院长春光机所</span></a><br />
 <a href="http://m.xinhuanet.com/2017-03/28/c_1120710040.htm" target="_blank"><span style="font-family:SimHei;font-size:16px;">新华网</span></a><br />
 <a href="http://jl.sina.com.cn/news/b/2017-03-28/detail-ifycstww1490228.shtml" target="_blank"><span style="font-family:SimHei;font-size:16px;">新浪网</span></a><br />
 <a href="http://news.xwh.cn/2017/0327/375514.shtml" target="_blank"><span style="font-family:SimHei;font-size:16px;">新文化网</span></a><br />
-<a href="http://finance.china.com.cn/roll/20170327/4152431.shtml" target="_blank"><span style="font-family:SimHei;font-size:16px;">中国财经网</span></a><br />
+<a href="http://finance.china.com.cn/roll/20170327/4152431.shtml" target="_blank"><span style="font-family:SimHei;font-size:16px;">中国财经网</span></a><br /><br /><br />
 </div>
 <img src="images/btn_back2.png" width="8%" style="position:fixed; bottom:10px; left:20px" onClick="history.go(-1)"/>
  </div>
