--- a/cggcsWeb/yhys.html
+++ b/cggcsWeb/yhys.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="css/iconfont.css" />
 <link rel="stylesheet" type="text/css" href="css/animate.css">
 <link rel="stylesheet" type="text/css" href="css/weixin_slide.css" >
-
+<script type="text/javascript" src="js/tagVal.js"></script>
 </head>
 
 <body>
@@ -25,18 +25,30 @@
     </tr>
   </tbody>
 </table>
-<div style="color:#FFFFFF; padding:20px; line-height:30px;">
+<div style="color:#FFFFFF; padding:20px; line-height:30px;font-family:SimHei;font-size:16px;">
 <table width="100%" border="0">
   <tbody>
-    <tr>
-      <td><img src="images/v4_line.png" width="50%"/></td>
-      <td style="padding-top:25px">
-      <span style="font-family:SimHei;font-size:16px;"><strong>设备：</strong>光机所高科技实验室及先进仪器设备；</span><br /><br />
-<span style="font-family:SimHei;font-size:16px;"><strong>实训：</strong>光机所及长光集团70家企业实习、实训；</span><br /><br />
-<span style="font-family:SimHei;font-size:16px;"><strong>师资：</strong>光机所数十位一线资深科研员手把手教学；</span><br /><br />
-<span style="font-family:SimHei;font-size:16px;"><strong>就业：</strong>光机所及长光集团70余家企业签约保就业；</span><br /><br />
-<span style="font-family:SimHei;font-size:16px;"><strong>其他机会：</strong>在职读博、出国深造、项目编、所编等；</span>
+    <tr style="vertical-align:text-top">
+      <td><img src="images/v4_point.png" width="25px"/></td>
+      <td>
+      <strong>设备：</strong>光机所高科技实验室及先进仪器设备；<br /><br />
       </td>
+    </tr>
+    <tr style="vertical-align:text-top">
+      <td><img src="images/v4_point.png" width="25px"/></td>
+      <td><strong>实训：</strong>光机所及长光集团70家企业实习、实训；<br /><br /></td>
+    </tr>
+    <tr style="vertical-align:text-top">
+      <td><img src="images/v4_point.png" width="25px"/></td>
+      <td><strong>师资：</strong>光机所数十位一线资深科研员手把手教学；<br /><br /></td>
+    </tr>
+    <tr style="vertical-align:text-top">
+      <td><img src="images/v4_point.png" width="25px"/></td>
+      <td><strong>就业：</strong>光机所及长光集团70余家企业签约保就业；<br /><br /></td>
+    </tr>
+    <tr style="vertical-align:text-top">
+      <td><img src="images/v4_point.png" width="25px"/></td>
+      <td><strong>其他机会：</strong>在职读博、出国深造、项目编、所编等。<br /></td>
     </tr>
   </tbody>
 </table>
