--- a/cggcsWeb/tagValError.html
+++ b/cggcsWeb/tagValError.html
@@ -6,6 +6,15 @@
 </head>
 
 <body><br/><br/><br/>
-<h1 align="center">请用移动端设备浏览！</h1>
+<h1 align="center" style="margin-top:30px">请用微信扫一扫关注后浏览！</h1>
+<table width="200" border="0" align="center">
+  <tbody>
+    <tr>
+      <td><img src="images/22.png" width="250" /></td>
+      <td><img src="images/changguang.jpg" width="250"/></td>
+    </tr>
+  </tbody>
+</table>
+
 </body>
 </html>
