--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -115,7 +115,7 @@ window.location.href = "weixin_index.html";  //可以换成http地址
 						<img src="images/hd3.jpg" width="200" height="100"/></a></li>   
                          <li><a href="http://mp.weixin.qq.com/s/qbSnjnQ2wldAgJvqvu5-Rw" target="_blank">
 						 <img src="images/hd4.jpg"  width="200" height="100"/></a></li>                       
-                        <li style="margin:0px"><a href="http://mp.weixin.qq.com/s/s0PQ1Eso4Jcq5w9GoYJxMQ" target="_blank">
+                        <li style="margin:0px"><a href="http://www.jlzhiwei.cn" target="_blank">
 						<img src="images/hd5.jpg" /></a></li>
                 </ul>
          </div>
