--- a/foot.html
+++ b/foot.html
@@ -22,7 +22,7 @@
         <img src="images/zhixiang_wx.jpg" width="120" height="120" />
         <div class="arrow"></div>
     </div>
-    <a href="http://mp.weixin.qq.com/s/oBAuRfmsuyFD8JkSwwx1pQ" target="_blank">吉林省智享科技有限责任公司</a>
+    <a href="http://www.jlzhiwei.cn" target="_blank">吉林省致微科技有限责任公司</a>
 </div>
 <!--代码部分end--><!--
 <div style="float:right; padding-top: 18px;display:inline">
